# backend/types/movies-api.ts
@@ -1,17 +1,0 @@
-export interface MovieInfo {
-  title: string;
-  directors?: string[];
-  starring?: string[];
-  imgSrc?: string;
-  ids: string[];
-  year?: string;
-}
-
-export interface AddMovieRequest {
-  movieInfo: MovieInfo;
-}
-
-export interface FinishedMovieRequest {
-  movieInfo: MovieInfo;
-  rating: string;
-}
